--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -20,4 +20,22 @@
     font-size: 25px;
 }
 
+.links a:hover {
+    color: rgb(255, 255, 255);
+}
+
+.search {
+    margin-right: 70px;
+    display: flex;
+    align-items: center;
+}
+
+.search input {
+    width: 300px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding-left: 10px;
+}
+
 
