--- a/src/components/Navigation/navbar.css
+++ b/src/components/Navigation/navbar.css
@@ -3,14 +3,42 @@
     height: 80px;
     background-color: rgb(19, 19, 19);
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    overflow: hidden;
+    position: relative;
+}
+
+
+.home-link {
+    display: flex;
+    margin-right: 100px;
+    align-items: center;
+    color: azure;
+    text-decoration: none;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    float: left;
+
+}
+
+.search {
+    margin-right: 250px;
+    display: flex;
+    
+}
+
+.search input {
+    width: 300px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
 }
 
 .links {
-    margin-right: 50px;
     display: flex;
-    align-items: center;
+    margin-right: 50px;
+    
 }
 
 .links a {
@@ -21,21 +49,17 @@
 }
 
 .links a:hover {
-    color: rgb(255, 255, 255);
+    color: aquamarine;
 }
 
-.search {
-    margin-right: 250px;
-    display: flex;
-    align-items: center;
+.home-link:hover {
+    color: aquamarine;
 }
 
-.search input {
-    width: 300px;
-    height: 30px;
-    border-radius: 5px;
-    border: none;
-    padding-left: 10px;
+.home-link a {
+    text-decoration: none;
+    color: azure;
+    margin-left: 20px;
+    font-size: 25px;
 }
-
 
