--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -1,14 +1,20 @@
 .shopTitle {
     margin-top: 50px;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
+    color: wheat;
   }
-  .products {
+
+  .storeimg {
     width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    place-items: center;
+    height: 500px;
+    object-fit: cover;
+  }
+
+  .products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   
   .product {
@@ -52,11 +58,3 @@
     cursor: pointer;
   }
 
-  .storeimg {
-    width: 100%;
-    height: 100%;
-    padding-top: none;
-    padding-bottom: none;
-    border-radius: only 15px 15px 0 0;
-    object-fit: cover;
-  }
