--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,14 +1,16 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
+  margin-left: 20rem;
+  margin-top: 2rem;
   z-index: -2;
   
 }
 
 .card {
-    margin: 5px;
+    margin: 10px;
     border: 3px solid #ededed;
-    padding: 5px;
+    padding-right: 20px;
     cursor: pointer;
 }
 
