--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -13,20 +13,13 @@
 
   .products {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
+    height: auto;
+    display: grid;
+    place-items: center;
   }
   
-  .product {
-    border-radius: 15px;
-    width: 300px;
-    height: 350px;
-    margin: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
   
   .product img {
     width: 400px;
