--- a/src/components/Navigation/navbar.css
+++ b/src/components/Navigation/navbar.css
@@ -3,28 +3,31 @@
     height: 80px;
     background-color: rgb(19, 19, 19);
     display: flex;
+    justify-content: flex-end;
     justify-content: space-between;
     align-items: center;
     overflow: hidden;
-    position: relative;
 }
 
+.home-icon {
+    margin-right: 100px;
+    color: azure;
+    font-size: 25px;
+    justify-content: space-between;
+}
 
 .home-link {
     display: flex;
-    margin-right: 100px;
-    align-items: center;
     color: azure;
     text-decoration: none;
     font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
-    float: left;
-
 }
 
 .search {
-    margin-right: 250px;
+    margin-right: 150px;
     display: flex;
+    align-items: center;
     
 }
 
